<resources>
    <string name="app_name">Head&amp;Hands</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>
    <!-- Экран входа!-->
    <string name="activity_login">Авторизация</string>
    <string name="email">Электронная почта</string>
    <string name="pass">Пароль</string>
    <string name="login">Войти</string>
    <string name="action_signin">создать</string>
    <string name="empty_field_error">Поле не может быть пустым.</string>

    <string name="email_error">Неверный формат email</string>
    <string name="password_error">Пароль дожен быть минимум 6 символов, содержать 1 строчную букву, 1 заглавную, и 1 цифру.</string>
    <string name="activity_signin">Регистрация</string>
    <string name="retry_password">Повторите пароль</string>
    <string name="signin">Зарегистрироваться</string>
    <string name="equals_password">Пароли не совпадают</string>
</resources>
